added Studet  upgrde profiles API's
